# findString

./: .directory  CMakeLists.txt  filesgrouper.cpp  filesgrouper.h  finder.cpp  finder.h  finder_progress_window.ui  indexator.cpp  indexator.h  indexator.h.autosave  mainwindow.cpp  mainwindow.h  mainwindow.ui  mytreewidget.cpp  mytreewidget.h  progressdialog.cpp  progressdialog.h  progressdialog.ui  trigram.h
